--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							</a>
 
 							<a href="#" target="_blank">
-								<button type="button" class="btn btn-link btn-lg">Download App</button>
+								<button type="button" class="btn btn-link btn-lg">Download App!</button>
 							</a>
 						</div>
 					</div>
