--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 	</div>
 
-	<div class="display2">
+	<div class="container-fluid display2">
 		<div class="container">
 			<h1 class="text-center"><a name="Features"></a>Features</h1>
 			<div class="row">
@@ -139,7 +139,7 @@
 		</div>
 	</div>
 
-	<div class="display3">
+	<div class="container-fluid display3">
 		<h1>Magic Menu Team</h1>
 		<div class="container">
 			<div class="row">
